Fixed z-index variables

--- a/styles/base/base.scss
+++ b/styles/base/base.scss
@@ -6,6 +6,7 @@
 
 html{
   font-size: calc(100vw / 1920 * 10); // viewport divided by the design's screen size
+  line-height: 1
 }
 
 body{
