--- a/styles/layout/navigation.scss
+++ b/styles/layout/navigation.scss
@@ -1,17 +1,20 @@
 .navigation {
+  @extend %cover;
 
-}
-
-.navigation__wrapper {
-
+  color: $color-quarter-spanish-white;
+  z-index: map-get($z-index, navigation);
 }
 
 .navigation__link{
-
+  height: 2rem;
+  left: 4rem;
+  position: absolute;
+  top: 4rem;
+  width: 12.8rem;
 }
 
 .navigation__link__icon{
-
+  display: block;
 }
 
 .navigation__list {
@@ -19,9 +22,11 @@
 }
 
 .navigation__list__item {
-
+  position: absolute;
+  right: 4rem;
+  top: 4rem;
 }
 
 .navigation__list_link {
-  
+  @extend %title-20;
 }
