--- a/styles/shared/titles.scss
+++ b/styles/shared/titles.scss
@@ -21,6 +21,7 @@
 %title-53{
   font-family: $font-george-x;
   font-size: 5.3rem;
+  line-height: 1;
 }
 
 %title-60{
